--- a/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.css
+++ b/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.css
@@ -1,3 +1,18 @@
+.color-button{
+  background-color: #496bb7;
+}
+.font-size {
+  font-family: 'Baloo 2', cursive;
+  font-size: 18px;
+}
+.font-size-tittle {
+  font-family: 'Baloo 2', cursive;
+  font-size: 28px;
+}
+.font-color {
+  color: #496bb7;
+  font-weight: bold;
+}
 .separate{
     margin-right: 10px;
 }
