--- a/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
+++ b/src/app/ejercicio/crear-ejercicio/crear-ejercicio.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex myfont" id="wrapper">
+<div class="d-flex font-size" id="wrapper">
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-heading">MENU </div>
         <hr>
@@ -17,80 +17,51 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
             <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
             <span class="separate"></span>
-            <a class="navbar-brand" href="#">{{app}}</a>
+            <a class="navbar-brand" href="#"></a>
         </nav>
         <div class="container">
             <div class="row">
-                <div class="col-sm" align="center">
-                    <h2>EJERCICIO</h2>
+                <div class="col" align="center">
+                    <h2 class="font-color font-size-tittle">EJERCICIO</h2>
                     <hr>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <label>Descripcion:</label>
-                            <div class="input-group">
-                                <input type="text" [(ngModel)]="ejercicio.descripcion"
-                                    class="form-control form-control-sm"
-                                    oninput="this.value = this.value.toUpperCase()">
-                                <div class="input-group-text"><i class="fa fa-walking"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <label>Tipo:</label>
-                            <div class="input-group">
-                                <select [(ngModel)]="ejercicio.tipoMusculo" class="form-control form-control-sm">
-                                    <option value=""></option>
-                                    <option *ngFor="let musculo of musculos; let i=index" [value]=musculo.valor>
-                                        {{musculo.valor}}</option>
-                                </select>
-                                <div class="input-group-text"><i class="fa fa-dumbbell"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm">
-                            <label>Imagen:</label>
-                            <div class="input-group">
-                                <input hidden type="file" #botonImagen id="imagen" name="imagen"
-                                    (change)="cargarImagen($event)">
-                                <button (click)="botonImagen.click()" class="btn btn-sm btn-block btn-primary">Cargar
-                                    Imagen</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm">
-                            <ng-container *ngIf="imagen!=null">
-                                <p>{{imagen.name}}</p>
-                            </ng-container>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <button type="button" (click)="crear()" class="btn btn-success btn-sm btn-block"
-                                oninput="this.value = this.value.toUpperCase()">Guardar</button>
-                        </div>
+            <div class="row mb-3">
+                <div class="col-12">
+                    <div class="form-floating">
+                        <input type="text" [(ngModel)]="ejercicio.descripcion" placeholder="" class="form-control"
+                            oninput="this.value = this.value.toUpperCase()" id="floatingNombre">
+                        <label for="floatingNombre">Nombre</label>
                     </div>
                 </div>
-                <div class="col-sm-3"></div>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-sm">
-                    <footer class="text-muted">
-                        <div class="container">
-                            <p>{{app}}</p>
-                            <p>Todos los derechos reservados 2021.</p>
-
-                        </div>
-                    </footer>
+            <div class="row mb-3">
+                <div class="form-floating">
+                    <select [(ngModel)]="ejercicio.tipoMusculo" id="floatingTipoMusculo" [compareWith]="compareFn" class="form-select">
+                        <option *ngFor="let tipoMusculo of tiposMusculos; let i=index" [value]=tipoMusculo>
+                            {{tipoMusculo.descripcion}}</option>
+                    </select>
+                    <label for="floatingTipoMusculo">Tipo Musculo</label>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="d-grid gap-1">
+                    <label style="text-align: center;">Imagen:</label>
+                    <input hidden type="file" #botonImagen id="imagen" name="imagen"
+                        (change)="cargarImagen($event)">
+                    <button (click)="botonImagen.click()" class="btn btn-primary">Cargar Imagen</button>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-12">
+                    <ng-container *ngIf="imagen!=null">
+                        <p>{{imagen.name}}</p>
+                    </ng-container>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="d-grid gap-1">
+                    <button type="button" (click)="crear()" class="btn btn-success">Guardar</button>
                 </div>
             </div>
         </div>
