--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
@@ -17,28 +17,24 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
             <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
             <span class="separate"></span>
-            <a class="navbar-brand" href="#">GIMNASIO OLIMPIA</a>
+            <a class="navbar-brand" href="#"></a>
         </nav>
         <div class="container">
             <div class="row">
-                <div class="col-sm" align="center">
+                <div class="col-12" align="center">
                     <hr>
-                    <h2>EJERCICIOS REGISTRADOS</h2>
+                    <h2 class="font-color font-size-tittle">EJERCICIOS</h2>
                     <hr>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-10">
-                    <label>Descripcion:</label>
-                    <input type="text" [(ngModel)]="descripcion" class="form-control form-control-sm"
-                        oninput="this.value = this.value.toUpperCase()">
+            <div class="input-group mb-3">
+                <div class="form-floating col-10">
+                    <input type="text" [(ngModel)]="descripcion" placeholder="" class="form-control"
+                        id="floatingDescripcion">
+                    <label for="floatingDescripcion">Buscar Ejercicio</label>
                 </div>
-                <div class="col-sm-2">
-                    <label>&nbsp;</label>
-                    <button class="btn btn-sm btn-block btn-primary" (click)="consultarPorDescripcion()">Buscar</button>
-                </div>
+                <button type="button" class="btn btn-outline-info col-2"><i class="icon-search"></i></button>
             </div>
-            <br>
             <div class="row">
                 <div class="col-sm-12 scrollcustom">
                     <table class="table table-hover table-bordered" style="font-size: 0.7rem">
@@ -72,17 +68,6 @@
                     </table>
                 </div>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-sm">
-                    <footer class="text-muted">
-                        <div class="container">
-                            <p>{{app}} </p>
-                            <p>Todos los derechos reservados 2021.</p>
-                        </div>
-                    </footer>
-                </div>
-            </div>
         </div>
     </div>
 </div>
@@ -95,28 +80,21 @@
         </button>
     </div>
     <div class="modal-body">
-        <div class="row">
-            <div class="col-sm-12">
-                <label>Descripcion:</label>
-                <div class="input-group">
-                    <input type="text" [(ngModel)]="ejercicioActualizar.descripcion"
-                        class="form-control form-control-sm" oninput="this.value = this.value.toUpperCase()">
-                    <div class="input-group-text"><i class="fa fa-walking"></i></div>
+        <div class="row mb-3">
+            <div class="col-12">
+                <div class="form-floating">
+                    <input type="text" [(ngModel)]="ejercicioActualizar.descripcion" oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control" id="floatingDescripcion">
+                    <label for="floatingDescripcion">Descripcion</label>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <label>Tipo:</label>
-                <div class="input-group">
-                    <select [(ngModel)]="ejercicioActualizar.tipoMusculo" [compareWith]="compareFn"
-                        class="form-control form-control-sm">
-                        <option></option>
-                        <option *ngFor="let tipoMusculo of tiposMusculo" [ngValue]=tipoMusculo>
-                            {{tipoMusculo.descripcion}}</option>
-                    </select>
-                    <div class="input-group-text"><i class="fa fa-dumbbell"></i></div>
-                </div>
+        <div class="row mb-3">
+            <div class="form-floating">
+                <select [(ngModel)]="ejercicioActualizar.tipoMusculo" [compareWith]="compareFn" id="floatingTipoMusculo" class="form-select">
+                    <option *ngFor="let tipoMusculo of tiposMusculos; let i=index" [value]=tipoMusculo>
+                        {{tipoMusculo.descripcion}}</option>
+                </select>
+                <label for="floatingTipoMusculo">Tipo Musculo</label>
             </div>
         </div>
     </div>
