--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -1,36 +1,37 @@
-<div class="container"
+<div class="container font-size"
     style="background-image: url({{prefijoUrlImagenes+fondoInicioSesion[0].valor}}); width: 100%; height: 100%">
     <div class="row">
-        <div class="col-12">
-            <div class="row">
-                <img src="{{prefijoUrlImagenes+logo[0].valor}}" alt="...">
-            </div>
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <div class="form-floating">
-                        <input type="text" [(ngModel)]="sesion.usuario.identificacion"
-                            oninput="this.value = this.value.toUpperCase()" placeholder=""
-                            class="form-control form-control-sm" id="floatingInput">
-                        <label for="floatingInput">Identificacion</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <div class="form-floating">
-                        <input type="password" [(ngModel)]="sesion.usuario.contrasena" placeholder="" class="form-control form-control-sm" id="floatingInput">
-                        <label for="floatingInput">Contraseña</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                    <button class="btn font-button font-color-button color-button"
-                        (click)="iniciarSesion()">Entrar</button>
-                </div>
+        <img src="{{prefijoUrlImagenes+logo[0].valor}}" alt="...">
+    </div>
+    <div class="row">
+        <div class="col-12 mb-4">
+            <div class="form-floating">
+                <input type="text" [(ngModel)]="sesion.usuario.identificacion"
+                    oninput="this.value = this.value.toUpperCase()" placeholder="" class="form-control"
+                    id="floatingInput">
+                <label for="floatingInput" class="color-label">Identificacion</label>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 mb-4">
+            <div class="form-floating">
+                <input type="password" [(ngModel)]="sesion.usuario.contrasena" placeholder=""
+                    class="form-control form-control-sm" id="floatingInput">
+                <label for="floatingInput" class="color-label">Contraseña</label>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6 d-grid gap-1">
+            <button type="button" class="btn btn-primary font-button font-color-button color-button"
+                (click)="iniciarSesion()">Entrar</button>
+        </div>
+        <div class="col-3"></div>
+    </div>
+    <br>
+    <br>
     <br>
     <br>
     <br>
